--- a/5.MYSQL使用limit优化查询.md
+++ b/5.MYSQL使用limit优化查询.md
@@ -133,3 +133,38 @@ SELECT id,title,content FROM items WHERE id IN (SELECT id FROM items ORDER BY id
 
    SELECT * FROM users WHERE uid >=  (SELECT uid FROM users ORDER BY uid limit 895682, 1) limit 0, 10;
    如果limit的offset值过大，用户也会翻页疲劳，你可以设置一个offset最大的，超过了可以另行处理，一般连续翻页过大，用户体验很差，则应该提供更优的用户体验给用户。
+
+
+
+
+
+本地数据库表 contact ,数据量
+
+> 1.只有id索引时的查询
+
+```java 
+0.042s 
+select id from contact where type=1  order by id  limit 90000,10
+```
+
+```java 
+0.016s
+select id from contact  order by id limit 90000,10
+```
+
+```java 
+0.044s
+explain select name from contact where type=1 order by id limit 90000,10
+    
+```
+
+> 执行解释计划结果:
+
+| id   | select_type | table   | partitions | type  | possible_keys | key     | key_len | ref  | rows  | filtered | Extra       |
+| ---- | ----------- | ------- | ---------- | ----- | ------------- | ------- | ------- | ---- | ----- | -------- | ----------- |
+| 1    | SIMPLE      | contact |            | index |               | PRIMARY | 4       |      | 90010 | 10.00    | Using where |
+
+结论:
+
+> 如果带有limit的大的offset查询,先定位到id,让后将id作为子查询进行再次查询 添加limit 10,这样效果会更好;
+
