临建锁 间隙锁 记录所

--- a/数据库/3.mysql事务,锁,隔离级别,MVCC.md
+++ b/数据库/3.mysql事务,锁,隔离级别,MVCC.md
@@ -234,6 +234,12 @@ show variables like  'innodb_autoinc_lock_mode';
 
   当sql执行按照索引进行数据的检索时,查询条件为范围查找（between and、<、>等）并有数 据命中则此时SQL语句加上的锁为Next-key locks，锁住索引的记录+区间（左开右闭）
 
+  【将表中数据每行之间当作一个区间，如果有4条数据，则会生成5个区间，如下图】
+
+  ![image-20200416230154061](D:\data\typora-images\image-20200416230154061.png)
+
+  
+
 * **Gap locks：** 
 
   * 锁住数据不存在的区间（左开右开）
@@ -252,13 +258,50 @@ show variables like  'innodb_autoinc_lock_mode';
 
 ![image-20200416212413378](D:\data\typora-images\image-20200416212413378.png)
 
+> 上图，表结构： id，name；且id无自增，id为主键。
+>
+> 表中只有四条数据：
+>
+> | id   | name |
+> | ---- | ---- |
+> | 1    | 1    |
+> | 4    | 4    |
+> | 7    | 7    |
+> | 10   | 10   |
+>
+> **如上图，将表中数据每行之间当作一个区间，如果有4条数据，则会生成5个区间：(-∞，1] (1，4] (4，7] (7，10] (10，+∞]** 
+>
 > 临建锁 大致含义：
 >
-> 将表数据
+> 操作：
+>
+> 1.事务A 执行 begin；开启事务， 
+>
+> 2.事务A select * from t where id>5 and id<9 for update ; 添加X锁（排它锁），**锁住了(4，7] (7，10] 两个区间。**
+>
+> 此时，事务A会锁住id为7的行，以及 4<id<=7区间范围，如果另外一个事务B要写这个范围，事务B是阻塞无法执行的。
+>
+> 同时，事务A还会锁住7<id<=10区间范围，这个范围的id对应的行的数据，其他事务B也是无法进行写，直到事务A commit后才能写。
+>
+> 3.事务B 执行 begin；开启事务，
+>
+> 4.select  *  from t where id=4 for update ,表示事务B 要加排它锁，执行结果：事务B 可以执行。【符合左开右闭原则】
+>
+> 5.select  *  from t where id=7 for update ,表示事务B 要加排它锁，执行结果：事务B 阻塞，不可以执行。【符合左开右闭原则】
+>
+> 6.select  *  from t where id=10 for update ,表示事务B 要加排它锁，执行结果：事务B 阻塞，不可以执行。【符合左开右闭原则】
+>
+> 6.select  *  from t where id=11 for update ,表示事务B 要加排它锁，执行结果：事务B 执行成功。【符合左开右闭原则】
 
 
+
+**为什么innodb选择临建锁Next-key作为行锁的默认算法？**
+
+`答：防止幻读，因为临建锁锁住了查询记录的左右两条数据的区间id，所以，在同一时间其他的事务则无法插入当前记录的临近数据（因为innodb叶子节点中的数据都是顺序性的，查询记录的临界区间肯定也是自增的，就避免了另外事务进行insert临近数据了）`
 
 ##### 4.1.6间隙锁（Gap）
+
+`当sql执行按照索引进行数据的检索时，查询条件的数据不存在，这时SQL语句加上的锁即为 Gap locks，锁住索引不存在的区间（左开右开）`
 
 ![image-20200416212730549](D:\data\typora-images\image-20200416212730549.png)
 
@@ -270,7 +313,9 @@ show variables like  'innodb_autoinc_lock_mode';
 
 ![image-20200416212744720](D:\data\typora-images\image-20200416212744720.png)
 
+`1.可重复的普通索引，查询条件命中4时，锁住的是查询记录的左右两个区间的数据；`
 
+**`2.只有在唯一性索引当作查询条件命中的时候，才会用到record记录锁，且锁定的行数为当前的唯一记录；`**
 
 
 
