redo log undo log

--- a/数据库/3.mysql事务,锁,隔离级别,MVCC.md
+++ b/数据库/3.mysql事务,锁,隔离级别,MVCC.md
@@ -232,7 +232,7 @@ show variables like  'innodb_autoinc_lock_mode';
 
   * 锁住记录+区间（左开右闭）
 
-  当sql执行按照索引进行数据的检索时,查询条件为范围查找（between and、<、>等）并有数 据命中则此时SQL语句加上的锁为Next-key locks，锁住索引的记录+区间（左开右闭）
+  当sql执行按照索引进行数据的检索时,查询条件为范围查找（between and、<、>等【含义就是expain 执行计划命中的索引类型为 range类型】）并有数 据命中则此时SQL语句加上的锁为Next-key locks，锁住索引的记录+区间（左开右闭）
 
   【将表中数据每行之间当作一个区间，如果有4条数据，则会生成5个区间，如下图】
 
@@ -303,6 +303,8 @@ show variables like  'innodb_autoinc_lock_mode';
 
 `当sql执行按照索引进行数据的检索时，查询条件的数据不存在，这时SQL语句加上的锁即为 Gap locks，锁住索引不存在的区间（左开右开）`
 
+`Gap间隙锁 只在RR事务隔离级别存在`
+
 ![image-20200416212730549](D:\data\typora-images\image-20200416212730549.png)
 
 
@@ -350,3 +352,175 @@ show variables like  'innodb_autoinc_lock_mode';
 
 ![image-20200416213340621](D:\data\typora-images\image-20200416213340621.png)
 
+
+
+### 5.MVCC
+
+**MVCC： Multiversion concurrency control (多版本并发控制)** 
+
+
+
+普通话解释：
+
+**并发访问(读或写)数据库时，对正在事务内处理的数据做 多版本的管理。以达到用来避免写操作的堵塞，从而引发读操 作的并发问题。** 
+
+
+
+#### 5.1 Mysql中MVCC逻辑流程-插入
+
+> MVCC默认会给数据行加入三列（隐藏的列）：
+>
+> DB_TRX_ID（数据行版本号）,DB_ROLL_PT（删除版本号）,ROWNUM（行号）。
+
+![image-20200417090049612](D:\data\typora-images\image-20200417090049612.png)
+
+**操作：**
+
+> 1.如上，事务A，开启事务，获取全局事务ID号1（事务版本号），插入两条数据，
+>
+> 则在DB_TRX_ID中也存储此事务ID号;DB_ROLL_PT设置为null。
+
+
+
+#### 5.2 Mysql中MVCC逻辑流程-删除
+
+![image-20200417090719909](D:\data\typora-images\image-20200417090719909.png)
+
+
+
+**操作：**
+
+> 2.如上，事务A，开启事务，获取全局事务ID号22（事务版本号），删除id=2的数据，则设置DB_ROLL_PT=22，表示删除此条记录。
+
+
+
+#### 5.3Mysql中MVCC逻辑流程-修改
+
+![image-20200417091219286](D:\data\typora-images\image-20200417091219286.png)
+
+**操作：**
+
+> 3.如上，事务A，开启事务，获取全局事务ID号33（事务版本号），修改id=1的数据，
+>
+> 则先copy id=1的数据，然后将之前的数据 DB_ROLL_PT=33，表示事务ID号33操作的这条数据进行写操作。
+>
+> 将新copy的数据：DB_TRX_ID=33,DB_ROOL_PT=NULL。
+
+
+
+#### 5.4Mysql中MVCC逻辑流程-查询
+
+![image-20200417091618443](D:\data\typora-images\image-20200417091618443.png)
+
+
+
+#### 5.5Mysql中MVCC版本控制案例
+
+![image-20200417091836382](D:\data\typora-images\image-20200417091836382.png)
+
+
+
+##### 5.5.1MVCC版本控制案例一（1，2，3，4，2）
+
+> `（1，2，3，4，2）操作顺序，属于：a先查询，b修改，a查询，最终a查询结果不变。`
+
+![image-20200417101752020](D:\data\typora-images\image-20200417101752020.png)
+
+
+
+##### 5.5.2MVCC版本控制案例一（3，4，1，2）
+
+![image-20200417103222485](D:\data\typora-images\image-20200417103222485.png)
+
+> `（3，4，1，2）操作顺序，属于：a先修改，b查询，b查询结果是a刚修改但未提交的数据，产生了脏读问题。`
+>
+> 问题出在了哪里呢？
+
+
+
+### 6.Undo log
+
+Undo Log是什么？
+
+*  undo意为取消，以撤销操作为目的，返回指定某个状态的操作 
+* undo log指事务开始之前，在操作任何数据之前,首先将需操作的数据备份到一个地方 (Undo Log) 
+
+**UndoLog是为了实现事务的原子性而出现的产物** 
+
+Undo Log实现事务原子性： 
+
+* 事务处理过程中如果出现了错误或者用户执行了 ROLLBACK语句,Mysql可以利用Undo Log中的备份 将数据恢复到事务开始之前的状态 
+
+
+
+**UndoLog在Mysql innodb存储引擎中用来实现多版本并发控制** 
+
+Undo log实现多版本并发控制： 
+
+* 事务未提交之前，Undo保存了未提交之前的版本数据，Undo 中的数据可作为数据旧版本快照供 其他并发事务进行快照读 
+
+![image-20200417110212789](D:\data\typora-images\image-20200417110212789.png)
+
+
+
+#### 6.1当前读/快照读
+
+快照读： 
+
+* SQL读取的数据是快照版本，也就是历史版本，普通的SELECT就是快照读
+* innodb快照读，数据的读取将由 cache(原本数据) + undo(事务修改过的数据) 两部分组成
+
+ 当前读： 
+
+* SQL读取的数据是最新版本。通过锁机制来保证读取的数据无法通过其他事务进行修改 
+* UPDATE、DELETE、INSERT、SELECT … LOCK IN SHARE MODE、SELECT … FOR UPDATE都是 当前读 
+
+
+
+### 7.Redo Log
+
+![image-20200417110918190](D:\data\typora-images\image-20200417110918190.png)
+
+**Redo Log补充知识点：**
+
+1.指定Redo log 记录在{datadir}/ib_logfile1&ib_logfile2 可通过innodb_log_group_home_dir 配置指定 目录存储 
+
+2.一旦事务成功提交且数据持久化落盘之后，此时Redo log中的对应事务数据记录就失去了意义，所 以Redo log的写入是日志文件循环写入的 
+
+​		指定Redo log日志文件组中的数量 innodb_log_files_in_group 默认为2 
+
+​		指定Redo log每一个日志文件最大存储量innodb_log_file_size 默认48M 
+
+​		指定Redo log在cache/buffer中的buffer池大小innodb_log_buffer_size 默认16M 
+
+3.Redo buffer 持久化Redo log的策略，Innodb_flush_log_at_trx_commit： 
+
+​		取值 0 每秒提交 Redo buffer --> Redo log OS cache -->flush cache to disk[可能丢失一秒内 的事务数据] 
+
+​		取值 1 默认值，每次事务提交执行Redo buffer --> Redo log OS cache -->flush cache to disk [最安全，性能最差的方式] 
+
+​		取值 2 每次事务提交执行Redo buffer --> Redo log OS cache 再每一秒执行 ->flush cache to disk操作 
+
+### 8.数据库三范式
+
+ 第一范式（ 1NF）： 
+
+​		字段具有原子性,不可再分。 所有关系型数据库系统都满足第一范式）数据库表中的字段都是单一属性的，不可再分； 
+
+第二范式（ 2NF）： 
+
+​		要求实体的属性完全依赖于主键。 所谓完全依赖是指不能存在仅依赖主键一部分的属性， 如果存在， 那么这个属性和主关键字的这一部分应该分离出来形成一个新的实体， 新实体与原 实体之间是一对多的关系。为实现区分通常需要为表加上一个列，以存储各个实例的惟一标识。 简而言之， 第二范式就是属性完全依赖主键。 
+
+第三范式（ 3NF）： 
+
+​		满足第三范式（ 3NF） 必须先满足第二范式（ 2NF）。 简而言之， 第三范式（ 3NF） 要求一个数据库表中不包含已在其它表中已包含的非主键信息。 
+
+
+
+简单一点： 
+
+​		1， 每一列只有一个单一的值，不可再拆分 
+
+​		2， 每一行都有主键能进行区分 
+
+​		3， 每一个表都不包含其他表已经包含的非主键信息。 
