--- a/zookeeper/0.zookeeper单机or集群搭建 .md
+++ b/zookeeper/0.zookeeper单机or集群搭建 .md
@@ -105,6 +105,18 @@ dataLogDir=路径
 clientPort=2181
 ~~~
 
+`dataDir=存储的是数据的快照；DataLogDir=存储事务日志`
+
+`快照：存储某一时刻全量的内存数据内容`
+
+zookeeper有三种日志：
+
+> zookeeper.out //运行日志
+>
+> 快照日志            存储某一时刻全量的内存数据内容
+>
+> 事务日志            实务操作的日志记录
+
 **最终4台服务器 zoo.cfg 配置如下：**
 
 > 第一台机器配置（192.168.126.130）：![image-20200418115301192](D:\data\typora-images\image-20200418115301192.png)
