默认垃圾回收器，新生/老年代，内存占比； 初始化内存大小

--- a/jvm/7.查看JVM使用的垃圾回收器及分析.md
+++ b/jvm/7.查看JVM使用的垃圾回收器及分析.md
@@ -16,16 +16,22 @@
 ### 解读JVM使用的垃圾回收器属性
 
 > ```-XX:InitialHeapSize=128166912 -XX:MaxHeapSize=2050670592 -XX:+PrintCommandLineFlags -XX:+UseCompressedClassPointers  -XX:+UseCompressedOops -XX:+UseParallelGC```
+>
+> JDK1.8
+>
+> ​	默认初始化堆大小 : 128MB;
+>
+> ​	默认最大堆大小 : 2048MB;
 
 
 
 ##### -XX:InitialHeapSize=128166912 
 
-​		初始化堆大小，字节单位：128166912 /1024/1024=122.2294921875‬ MB 
+​		初始化堆大小，字节单位：128166912 /1024/1024=122.2294921875‬ MB  ≈ **128MB**
 
 ##### -XX:MaxHeapSize=2050670592 
 
-​		最大堆大小，2050670592/1024/1024/1024= 1.909GB
+​		最大堆大小，2050670592/1024/1024/1024= 1.909GB ≈ **2GB**
 
 ##### -XX:+PrintCommandLineFlags 
 
@@ -45,13 +51,78 @@
 
 
 
+InitialHeapSize = 130023424=124MB
+
+​		=NewSize  + OldSize
+
+NewSize = 42991616/1024/1024=41MB
+
+OldSize = 87031808/1024/1024=83MB
+
+> NewSize /OldSize = 1:2; 
+
+
+
+MaxHeapSize = 2051014656/1024/1024=1,956‬MB
+
+MaxNewSize = 683671552/1024/1024=652MB
+
+> 因为NewSize /OldSize = 1:2; 
+>
+> 所以 MaxNewSize /MaxHeapSize =0.3333,即新生代 占 堆总大小的33.33%;
+
+MaxHeapSize  = MaxNewSize  + 
+
+**新生代将内存按照8:1:1分为一个Eden和so，s1三个区域；**，因为对象生命周期不一样，所以产生了分代。
+
+​		**新生代：老年代=1：2**
+
+​		**当新生代沾满时，老年代会作为一个 分配担保，保存到老年代。**
+
+
+
 #### [垃圾收集器参数总结](https://www.cnblogs.com/wade-luffy/p/6053931.html)
 
 | 参数                   | 描述                                                         |
 | ---------------------- | ------------------------------------------------------------ |
 | **-XX:+UseParallelGC** | **Jvm运行在Server模式下的默认值，打开此开关后，使用Parallel Scavenge + Serial Old的收集器组合进行回收** |
 
-
+> **UseParallelGC ----> 是JDK8默认垃圾回收器**
+>
+> ##### JDK8默认垃圾回收器详解
+>
+> 今天面试问道JDK8默认使用的垃圾收集器是什么，然后回来第一时间CMD命令查看了一下：
+>
+> ```shell
+> java -XX:+PrintCommandLineFlags -version
+> 
+> -XX:InitialHeapSize=266390080 -XX:MaxHeapSize=4262241280 -XX:+PrintCommandLineFlags 
+> -XX:+UseCompressedClassPointers -XX:+UseCompressedOops 
+> -XX:-UseLargePagesIndividualAllocation -XX:+UseParallelGC
+> java version "1.8.0_191"
+> Java(TM) SE Runtime Environment (build 1.8.0_191-b12)
+> Java HotSpot(TM) 64-Bit Server VM (build 25.191-b12, mixed mode)
+> 12345678
+> ```
+>
+> UseParallelGC 即 Parallel Scavenge + Parallel Old,再查看详细信息
+>
+> ```shell
+> java -XX:+PrintGCDetails -version
+> 
+> java version "1.8.0_191"
+> Java(TM) SE Runtime Environment (build 1.8.0_191-b12)
+> Java HotSpot(TM) 64-Bit Server VM (build 25.191-b12, mixed mode)
+> Heap
+>  	PSYoungGen      total 76288K, used 2621K [0x000000076b500000, 0x0000000770a00000, 0x00000007c0000000)
+>   					eden space 65536K, 4% used [0x000000076b500000,0x000000076b78f748,0x000000076f500000)
+>   					from space 10752K, 0% used [0x000000076ff80000,0x000000076ff80000,0x0000000770a00000)
+>   					to   space 10752K, 0% used [0x000000076f500000,0x000000076f500000,0x000000076ff80000)
+> 	ParOldGen       total 175104K, used 0K [0x00000006c1e00000, 0x00000006cc900000, 0x000000076b500000)
+>   					object space 175104K, 0% used [0x00000006c1e00000,0x00000006c1e00000,0x00000006cc900000)
+>  	Metaspace       used 2291K, capacity 4480K, committed 4480K, reserved 1056768K
+>   					class space    used 254K, capacity 384K, committed 384K, reserved 1048576K
+> ```
 
 ### UseCompressedOops / UseCompressedClassPointers
 
