--- a/jvm/1.java中JVM和JMM之间的区别.md
+++ b/jvm/1.java中JVM和JMM之间的区别.md
@@ -4,7 +4,7 @@
 
 jvm的内部结构如下图所示，这张图很清楚形象的描绘了整个JVM的内部结构，以及各个部分之间的交互和作用。
 
- ![img](D:\data\typora-images\image-202004211016.png)
+ ![img](.\image\image-202004211016.png)
 
 1. **Class Loader（类加载器）**就是将Class文件加载到内存，再说的详细一点就是，把描述类的数据从Class文件加载到内存，并对数据进行校验、转换解析和初始化，最终形成可以被虚拟机直接使用的Java类型，这就是类加载器的作用。
 
@@ -47,7 +47,7 @@ jvm的内部结构如下图所示，这张图很清楚形象的描绘了整个JV
 
 Java内存模型(Java Memory Model，JMM)JMM主要是为了规定了线程和内存之间的一些关系。根据JMM的设计，系统存在一个主内存(Main Memory)，Java中所有变量都储存在主存中，对于所有线程都是共享的。每条线程都有自己的工作内存(Working Memory)，工作内存中保存的是主存中某些变量的拷贝，线程对所有变量的操作都是在工作内存中进行，线程之间无法相互直接访问，变量传递均需要通过主存完成。
 
-![img](D:\data\typora-images\image-202004211029.png)
+![img](.\image\image-202004211029.png)
 
 **四 jvm和jmm之间的关系**
 
