--- a/jvm/7.查看JVM使用的垃圾回收器及分析.md
+++ b/jvm/7.查看JVM使用的垃圾回收器及分析.md
@@ -9,7 +9,9 @@
 >
 > ```java -XX:+PrintCommandLineFlags -version```   (使用这种比较直观 个人感觉)
 >
-> ![image-20201027151713202](C:\Users\liyanchao\AppData\Roaming\Typora\typora-user-images\image-20201027151713202.png)
+> ![image-20210527094528872](.\image\image-20210527094528872.png)
+
+
 
 
 
@@ -47,7 +49,7 @@
 
 执行：``` java -XX:+PrintFlagsFinal -version | grep :  ```
 
-![image-20201027145938856](C:\Users\liyanchao\AppData\Roaming\Typora\typora-user-images\image-20201027145938856.png)
+![image-20210527094657875](.\image\image-20210527094657875.png)
 
 
 
