--- a/jvm/2.JVM垃圾回收机制.md
+++ b/jvm/2.JVM垃圾回收机制.md
@@ -24,7 +24,7 @@
         通过一系列名为GC Roots的对象作为起点，从这些节点往下搜索，搜索走过的路径称为引用链。当一个对象到GC Roots没有任何引用链相连时（意味着GC Roots到这个对象不可达），证明该对象是不可用的，则应该被回收
 
 
- <img src="D:\data\typora-images\image-202004211054.png" alt="img" style="zoom:50%;" />
+ <img src=".\image\image-202004211054.png" alt="img" style="zoom:50%;" />
 
 ## 4.垃圾回收算法的种类
 ### 4.1 按照方法分类：
@@ -36,19 +36,19 @@
 ​		第一就是标记，也就是标记所有的需要回收的对象；
 
 ​		第二就是清理，标记完成后进行统一的回收带有标记的对象占据的内存空间。缺点是效率问题，还有一个致命的缺点就是空间问题，标记清除之后会产生大量不连续的内存碎片，当程序在运行过程中需要分配较大对象时，无法找到足够的连续内存而造成内存空间浪费。
- <img src="D:\data\typora-images\image-20200421105622.png" alt="img" style="zoom:58%;" />
+ <img src=".\image\image-20200421105622.png" alt="img" style="zoom:58%;" />
 
 #### ②复制算法
 
        复制算法是将内存容量划分为大小相等的两块，每次只使用其中的一块。当一块内存用完之后，就将还存活的对象复制到另一块上面，然后再把已使用的内存空间一次性清理。这样使得每次都对其中的一块进行内存回收，内存分配时也就不用考虑内存碎片等复杂情况，只是这种算法的代价就是将内存缩小为原来的一半了。
 
- <img src="D:\data\typora-images\image-202004211104001.png" alt="img" style="zoom:67%;" />
+ <img src=".\image\image-202004211104001.png" alt="img" style="zoom:67%;" />
 
 #### ③标记-整理算法
 
 标记整理算法与标记清除算法很相似，但显著的区别是：标记清除算法仅对不存活的对象进行处理，剩余存活对象不做任何处理，这就造成了内存碎片的问题；而标记整理算法不仅对不存活的对象进行清除，还对存活的对象进行重新整理，因此不会产生内存不连续的现象。
 
- <img src="D:\data\typora-images\image-202004211105002.png" alt="img" style="zoom:70%;" />
+ <img src=".\image\image-202004211105002.png" alt="img" style="zoom:70%;" />
 
 ### 4.2 按照回收策略分类
 
@@ -60,7 +60,7 @@
 
 ​        新生代的目标就是尽可能快速的收集掉那些生命周期较短的对象，一般情况下新生成的或者朝生夕亡的对象一般都是首先存放在新生代里面。
 
- ![img](D:\data\typora-images\image-2020042111050003.png)
+ ![img](.\image\image-2020042111050003.png)
 
 ​		**新生代将内存按照8:1:1分为一个Eden和so，s1三个区域；**，因为对象生命周期不一样，所以产生了分代。
 
@@ -87,13 +87,7 @@
 永久代主要存放静态文件，如java类，方法等，永久代对垃圾回收没有显著影响。
 
 
- ![img](D:\data\typora-images\image-202004211106001.png)
+ ![img](.\image\image-202004211106001.png)
 
 **jdk1.8之前与之后的jmm结构**
-
-![image-20200422192200895](C:\Users\liyanchao\AppData\Roaming\Typora\typora-user-images\image-20200422192200895.png)
-
-
-
-![image-20200422192127225](C:\Users\liyanchao\AppData\Roaming\Typora\typora-user-images\image-20200422192127225.png)
 
