--- a/jvm/3.JVM垃圾回收机制和垃圾收集器详解.md
+++ b/jvm/3.JVM垃圾回收机制和垃圾收集器详解.md
@@ -54,7 +54,7 @@ class MyTest{
 根搜索算法是通过一些“GC Roots”对象作为起点，从这些节点开始往下搜索，搜索通过的路径成为引用链 
 （Reference Chain），当一个对象没有被GC Roots 的引用链连接的时候，说明这个对象是不可用的。
 
- ![这里写图片描述](D:\data\typora-images\image-202004211132001.png)
+ ![这里写图片描述](.\image\image-202004211132001.png)
 
 #### GC Roots 对象包括： 
 
@@ -142,7 +142,7 @@ no, i am dead :(
 
 标记—清除算法包括两个阶段：“标记”和“清除”。在标记阶段，确定所有要回收的对象，并做标记。清除阶段紧随标记阶段，将标记阶段确定不可用的对象清除。标记—清除算法是基础的收集算法。
 
- ![这里写图片描述](D:\data\typora-images\image-202004211133001.png)
+ ![这里写图片描述](.\image\image-202004211133001.png)
 
 标记-清除算法的缺点有两个：
 
@@ -154,7 +154,7 @@ no, i am dead :(
 
 复制算法将可用内存按容量划分为大小相等的两块，每次只使用其中的一块。当这一块的内存用完了，就将还存活着的对象复制到另外一块上面，然后再把已使用过的内存空间一次清理掉。这种算法适用于对象存活率低的场景，比如新生代。这样使得每次都是对整个半区进行内存回收，内存分配时也就不用考虑内存碎片等复杂情况，只要移动堆顶指针，按顺序分配内存即可，实现简单，运行高效。
 
- ![这里写图片描述](D:\data\typora-images\image-202004211134001.png)
+ ![这里写图片描述](.\image\image-202004211134001.png)
 
 事实上，现在商用的虚拟机都采用这种算法来回收新生代。因为研究发现，新生代中的对象每次回收都基本上只有10%左右的对象存活，所以需要复制的对象很少，效率还不错。
 
@@ -166,7 +166,7 @@ no, i am dead :(
 
 标记—整理算法和标记—清除算法一样，但是标记—整理算法不是把存活对象复制到另一块内存，而是把存活对象往内存的一端移动，然后直接回收边界以外的内存。标记—整理算法提高了内存的利用率，并且它适合在收集对象存活时间较长的老年代。
 
- ![这里写图片描述](D:\data\typora-images\image-202004211134002.png)
+ ![这里写图片描述](.\image\image-202004211134002.png)
 
 标记整理算法与标记清除算法最显著的区别是：标记清除算法不进行对象的移动，并且仅对不存活的对象进行处理；而标记整理算法会将所有的存活对象移动到一端，并对不存活对象进行处理，因此其不会产生内存碎片。
 
@@ -200,7 +200,7 @@ no, i am dead :(
 
 上面说过，各个平台虚拟机对内存的操作各不相同，因此本章所讲的收集器是基于JDK1.7Update14之后的HotSpot虚拟机。这个虚拟机包含的所有收集器如图：
 
- ![这里写图片描述](D:\data\typora-images\image-202004211135001.png)
+ ![这里写图片描述](.\image\image-202004211135001.png)
 
 其中用于回收新生代的收集器包括Serial、PraNew、Parallel Scavenge，回收老年代的收集器包括Serial Old、Parallel Old、CMS，还有用于回收整个Java堆的G1收集器。
 
@@ -210,19 +210,19 @@ no, i am dead :(
 
 ​		大家看名字就会知道，这个收集器是一个单线程的收集器，但它的“单线程”的意义并不仅仅说明它只会使用一个CPU或一条收集线程去完成垃圾收集工作，更重要的是在它进行垃圾收集时，必须暂停其他所有的工作线程，直到它收集结束。
 
- ![这里写图片描述](D:\data\typora-images\image-202004211135002.png)
+ ![这里写图片描述](.\image\image-202004211135002.png)
 
 ### 2、ParNew收集器 (复制算法)
 
 ​		新生代并行收集器，ParNew收集器其实就是Serial收集器的多线程版本，除了使用多条线程进行垃圾收集之外，其余行为包括Serial收集器可用的所有控制参数（例如：-XX：SurvivorRatio、-XX：PretenureSizeThreshold、-XX：HandlePromotionFailure等）、收集算法、Stop The World、对象分配规则、回收策略等都与Serial收集器完全一样，在实现上，这两种收集器也共用了相当多的代码。
 
- ![这里写图片描述](https://img-blog.csdn.net/20170906172857773?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvU2lsZW5jZU9P/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast) 
+ ![这里写图片描述](.\image\SouthEast) 
 
 ### 3、Parallel Scavenge收集器(复制算法)
 
 新生代并行收集器，追求高吞吐量，高效利用 CPU。
 
-![这里写图片描述](https://img-blog.csdn.net/20170906173049744?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvU2lsZW5jZU9P/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![这里写图片描述](.\image\SouthEast01.png)
 
 Parallel Scavenge收集器的特点是它的关注点与其他收集器不同，Parallel Scavenge收集器的目标是达到一个可控制的吞吐量（Throughput）。所谓吞吐量就是CPU用于运行用户代码的时间与CPU总消耗时间的比值，即吞吐量=运行用户代码时间/（运行用户代码时间+垃圾收集时间）。由于与吞吐量关系密切，Parallel Scavenge收集器也经常称为“吞吐量优先”收集器。
 
@@ -240,7 +240,7 @@ Parallel Old是Parallel Scavenge收集器的老年代版本，使用多线程和
 
 老年代并行收集器，以获取最短回收停顿时间为目标的收集器，具有高并发、低停顿的特点，追求最短GC回收停顿时间。
 
-![这里写图片描述](https://img-blog.csdn.net/20170906173934257?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvU2lsZW5jZU9P/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![这里写图片描述](.\image\SouthEast02.png)
 
 ​		CMS（Concurrent Mark Sweep）收集器是一种以获取最短回收停顿时间为目标的收集器。
 
@@ -260,7 +260,7 @@ CMS收集器存在3个缺点：
 
 ​		Java堆并行收集器，G1收集器是JDK1.7提供的一个新收集器，G1收集器基于“标记-整理”算法实现，也就是说不会产生内存碎片。此外，G1收集器不同于之前的收集器的一个重要特点是：G1回收的范围是整个Java堆(包括新生代，老年代)，而前六种收集器回收的范围仅限于新生代或老年代。
 
-![这里写图片描述](https://img-blog.csdn.net/20170906174428988?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQvU2lsZW5jZU9P/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/SouthEast)
+![这里写图片描述](.\image\SouthEast03.png)
 
 G1是一款面向服务端应用的垃圾收集器。 
 G1收集器的运作大致可划分为以下几个步骤：
